add getAllTeachersNames method